build cleanups